--- a/Font-end/BookTickets/src/app/account/success/infor-login/infor-login.component.html
+++ b/Font-end/BookTickets/src/app/account/success/infor-login/infor-login.component.html
@@ -6,11 +6,11 @@
             </div>
             <div class="infor-login-left">
                 <div class='item-left'>
-                    <p>Email</p>
+                    <p>Tài khoản</p>
                     <p>Mật khẩu</p>
                 </div>
                 <div class='item-right'>
-                    <p>lekimdinh1412@gmail.com</p>
+                    <p>{{taiKhoan}}</p>
                     <p>**********</p>
                 </div>
             </div>
@@ -23,21 +23,27 @@
                 Đổi mật khẩu
             </div>
             <div class="edit-infor">
-                <form action="">
-                    <div class="infor-item" style="padding-top: 5px;">
-                        <p for="">Mật khẩu cũ</p>
-                        <input type="password" placeholder="Nhập mật khẩu cũ">
+                <form [formGroup]='form' autocomplete="on">
+                    <div class="infor-item form-group" style="padding-top: 5px;">
+                        <p>Mật khẩu cũ:</p>
+                        <input type="{{showPassword1}}" placeholder="Nhập mật khẩu cũ" class="form-control" formControlName="oldPassword">
+                        <p *ngIf="showPassword1=='text'" (click)="onShowPassword(0)"><i class="fas fa-eye-slash"></i></p>
+                        <p *ngIf="showPassword1=='password'" (click)="onShowPassword(0)"><i class="fas fa-eye"></i></p>
                     </div>
                     <div class="infor-item">
                         <p for="">Mật khẩu mới</p>
-                        <input type="password" placeholder="Nhập mật khẩu mới">
+                        <input type="{{showPassword2}}" placeholder="Nhập mật khẩu mới" class="form-control" formControlName="newPassword">
+                        <p *ngIf="showPassword2=='text'" (click)="onShowPassword(1)"><i class="fas fa-eye-slash"></i></p>
+                        <p *ngIf="showPassword2=='password'" (click)="onShowPassword(1)"><i class="fas fa-eye"></i></p>
                     </div>
                     <div class="infor-item">
-                        <p for="">Nhập lại mật khẩu mới</p>
-                        <input type="password" placeholder="Nhập lại mật khẩu mới">
+                        <p>Nhập lại mật khẩu mới</p>
+                        <input type="{{showPassword3}}" placeholder="Nhập lại mật khẩu mới" class="form-control" formControlName="confirmPassword">
+                        <p *ngIf="showPassword3=='text'" (click)="onShowPassword(2)"><i class="fas fa-eye-slash"></i></p>
+                        <p *ngIf="showPassword3=='password'" (click)="onShowPassword(2)"><i class="fas fa-eye"></i></p>
                     </div>
                     <div class="infor-item">
-                        <p (click)='onShowEditInfor()'><button class="btn-infor-item">Xác nhận</button></p>
+                        <p (click)='onSubmit()'><button class="btn-infor-item">Xác nhận</button></p>
                     </div>
                 </form>
             </div>
