--- a/Font-end/BookTickets/src/app/account/success/infor-personal/infor-personal.component.html
+++ b/Font-end/BookTickets/src/app/account/success/infor-personal/infor-personal.component.html
@@ -4,42 +4,42 @@
             <div class="title">
                 Thông tin cá nhân
             </div>
-            <form action="">
+            <form [formGroup]="form">
                 <div class="item clear">
                     <div class="item-left">
-                        <p>Họ tên</p>
+                        <p style="font-size: 16px; font-weight: bold;">Họ tên</p>
                     </div>
                     <div class="item-center">
-                        <p *ngIf='!isEdit'>Lê Kim Đỉnh</p>
-                        <p *ngIf='isEdit'> <input type="text" placeholder="Lê Kim Đỉnh"></p>
-                    </div>
+                        <p>{{inforCustomer.tenKh}}</p>
+                    </div>  
                     <div class="item-right">
                         <p *ngIf="!isEdit" class="edit-password" style="text-align: right; color: #EF5222;" (click)='onEdit()'><i class="far fa-edit"></i> Cập nhật</p>
                     </div>
                 </div>
-                <div class="item clear">
-                    <div class="item-left">
-                        <p>Email</p>
+                <div class="item clear form-group">
+                    <div class="item-left ">
+                        <p style="font-size: 16px; font-weight: bold;">Email</p>
                     </div>
-                    <div class="item-center">
-                        <p>lekimdinh@gmail.com</p>
+                    <div class="item-center ">
+                        <p *ngIf='!isEdit'>{{inforCustomer.email}}</p>
+                        <p *ngIf='isEdit'> <input type="text" placeholder="{{inforCustomer.email}}" class="form-control" formControlName="email"></p>
+                    </div>
+                </div>
+                <div class="item clear form-group">
+                    <div class="item-left">
+                        <p style="font-size: 16px; font-weight: bold;">Điện thoại</p>
+                    </div>
+                    <div class="item-center ">
+                        <p *ngIf='!isEdit'>{{inforCustomer.sdt}}</p>
+                        <p *ngIf='isEdit'> <input type="text" placeholder="{{inforCustomer.sdt}}" class="form-control" formControlName="sdt"></p>
                     </div>
                 </div>
                 <div class="item clear">
                     <div class="item-left">
-                        <p>Điện thoại</p>
+                        <p style="font-size: 16px; font-weight: bold;">CMND</p>
                     </div>
                     <div class="item-center">
-                        <p>0337006601</p>
-                    </div>
-                </div>
-                <div class="item clear">
-                    <div class="item-left">
-                        <p>CMND</p>
-                    </div>
-                    <div class="item-center">
-                        <p *ngIf='!isEdit'>221478172</p>
-                        <p *ngIf='isEdit'> <input type="text" placeholder="221478172"></p>
+                        <p>{{inforCustomer.cmnd}}</p>
                     </div>
                 </div>
             </form>
@@ -48,47 +48,37 @@
             <div class="title">
                 Thông tin địa chỉ
             </div>
-            <form action="">
-                <div class="item clear">
+            <form [formGroup]='form' autocomplete="on">
+                <div class="item clear ">
                     <div class="item-left">
-                        <p>Địa chỉ</p>
+                        <p style="font-size: 16px; font-weight: bold;">Địa chỉ</p>
                     </div>
-                    <div class="item-infor-address">
-                        <p *ngIf='!isEdit'>Khu phố 3, phường Phú Thạnh, thành phố Tuy Hòa, tỉnh Phú Yên</p>
-                        <p *ngIf='isEdit'><input type="text" placeholder="Khu phố 3, phường Phú Thạnh, thành phố Tuy Hòa, tỉnh Phú Yên"></p>
+                    <div class="item-center form-group">
+                        <p *ngIf='!isEdit'>{{inforCustomer.diaChi}}</p>
+                        <p *ngIf='isEdit'><input type="text"  placeholder="{{inforCustomer.diaChi}}" class="form-control" formControlName="dia_chi"></p>
+                    </div>
+                </div>
+                <div class="item clear form-group">
+                    <div class="item-left">
+                        <p style="font-size: 16px; font-weight: bold;">Thành phố</p>
+                    </div>
+                    <div class="item-center">
+                        <p *ngIf='!isEdit'>{{inforCustomer.thanhPho}}</p>
+                        <p *ngIf='isEdit'><input type="text"  placeholder="{{inforCustomer.thanhPho}}" class="form-control" formControlName="thanh_pho"></p>
+                    </div>
+                </div>
+                <div class="item clear form-group">
+                    <div class="item-left">
+                        <p style="font-size: 16px; font-weight: bold;">Quận huyện</p>
+                    </div>
+                    <div class="item-center">
+                        <p *ngIf='!isEdit'>{{inforCustomer.quanHuyen}}</p>
+                        <p *ngIf='isEdit'><input type="text" placeholder="{{inforCustomer.quanHuyen}}" class="form-control" formControlName="quan_huyen"></p>
                     </div>
                 </div>
                 <div class="item clear">
                     <div class="item-left">
-                        <p>Thành phố</p>
-                    </div>
-                    <div class="item-infor-address">
-                        <p class="item-select" style="padding-top: 0px;">
-                            <select name="" id="list-item-city" disabled>
-                                <option value="value">Phú Yên</option>
-                                <option value="value">Phú Yên</option>
-                                <option value="value">Phú Yên</option>
-                             </select>
-                        </p>
-                    </div>
-                </div>
-                <div class="item clear">
-                    <div class="item-left">
-                        <p>Quận huyện</p>
-                    </div>
-                    <div class="item-infor-address">
-                        <p class="item-select" style="padding-top: 0px;">
-                            <select name="" id="list-item-district" disabled>
-                                <option value="value">Phú Yên</option>
-                                <option value="value">Phú Yên</option>
-                                <option value="value">Phú Yên</option>
-                            </select>
-                        </p>
-                    </div>
-                </div>
-                <div class="item clear">
-                    <div class="item-left">
-                        <p *ngIf='isEdit' (click)='onEdit()'><button class="button-item-update">Cập nhật</button></p>
+                        <p *ngIf='isEdit' (click)='onEdit()'><button class="button-item-update">Lưu</button></p>
                     </div>
                 </div>
             </form>
