--- a/Font-end/BookTickets/src/app/account/success/success.component.html
+++ b/Font-end/BookTickets/src/app/account/success/success.component.html
@@ -1,4 +1,4 @@
-<app-header success=1></app-header>
+<app-header success=1 pointAward={{customer.diemTichLuy}} totalPoint={{customer.tongDiem}}></app-header>
 <div class="clear"></div>
 <section>
     <div class="container-success">
@@ -38,7 +38,7 @@
         <app-reward-point></app-reward-point>
     </div>
     <div *ngIf='index==3'>
-        <app-infor-login></app-infor-login>
+        <app-infor-login taiKhoan={{taiKhoan}}></app-infor-login>
     </div>
     <div *ngIf='index==4'>
         <app-infor-personal></app-infor-personal>
