--- a/Font-end/BookTickets/src/app/book-tickets/pay/pay.component.html
+++ b/Font-end/BookTickets/src/app/book-tickets/pay/pay.component.html
@@ -1,11 +1,11 @@
 <app-header index=-1></app-header>
-<section>
+<section *ngIf=!isPay>
     <div class="route-container">
         <ul class="progressbar">
             <li class="active"></li>
             <li class="active"></li>
             <li class="active"></li>
-            <li class="active-next">Thanh toán</li>
+            <li class="active-next" (click)="onPay()">Thanh toán</li>
         </ul>
         <div class="clear" style="height: 50px;">
         </div>
@@ -31,7 +31,7 @@
                 <h3>Thông tin vé</h3>   
                 <div class="customer-infor">
                     <div class="customer-name">
-                        Tuyến xe: <label for="">{{infor_router.departure}} => {{infor_router.destination}}</label>
+                        Tuyến xe: <label for="">{{infor_router.departure.ben_toi}} => {{infor_router.destination.ben_toi}}</label>
                     </div>
                     <div class="customer-phone">
                         Số lượng ghế: <label for="">{{infor_seat.number}}</label>
@@ -42,10 +42,10 @@
                 </div>
                 <div class="customer-infor">
                     <div class="customer-name">
-                        Thời gian: <label for="" style="color: #00613D;">{{infor_seat.time}} {{infor_router.daygo}}</label>
+                        Thời gian: <label for="" style="color: #00613D;">{{infor_seat.time}}:00h - {{infor_router.daygo}}</label>
                     </div>
                     <div class="customer-phone">
-                        Điểm lên xe: <label for="">{{infor_seat.boarding_point}}</label>
+                        Điểm lên xe: <label for="">{{infor_seat.boardingPoint.name}}</label>
                     </div>
                     <div class="customer-email">
                     </div>
@@ -54,21 +54,7 @@
             <div class="customer total">
                 <div>
                     <p>Tổng Tiền</p>
-                    <p class="pay-total">{{infor_seat.total_money}} <sup data-v-6f125f51="">₫</sup></p>
-                </div>
-            </div>
-        </div>
-        <div class="select-pay">
-            <p>Cách chọn thanh toán</p>
-            <div class="pay-type">
-                <div class="pay-items">
-                    <button (click)="onSelect(1)"><img src="../../../assets/visa.png" alt="" ><p>Thẻ Quốc tế Visa/Master/JCB</p></button>
-                </div>
-                <div class="pay-items">
-                    <button (click)="onSelect(2)"><img src="../../../assets/napas.png" alt="" ><p>Thẻ ATM Nội địa</p></button>
-                </div>
-                <div class="pay-items">
-                    <button (click)="onSelect(3)"><img src="" alt="" ><p>PayPal</p></button>
+                    <p class="pay-total">{{infor_seat.totalMoney}} <sup data-v-6f125f51="">₫</sup></p>
                 </div>
             </div>
         </div>
@@ -77,9 +63,12 @@
             <button class="button" [routerLink]="['/booktickets/infor-customer']"><i class="fas fa-chevron-left"></i> Quay Lại</button>
         </div>
         <div class="cont">
-            <button class="button" (click)="onPay()">Tiếp Tục<i class="fas fa-chevron-right"></i></button>
+            <button class="button" (click)="onPay()">Thanh toán<i class="fas fa-chevron-right"></i></button>
         </div>
     </div>
+</section>
+<section *ngIf=isPay>
+    <app-paypall></app-paypall>
 </section>
 <div class="clear"></div>
 <app-footer></app-footer>
