--- a/Font-end/BookTickets/src/app/home/home.component.html
+++ b/Font-end/BookTickets/src/app/home/home.component.html
@@ -3,17 +3,16 @@
     <img src="./assets/background.png" alt="" class="site-title">
     <div class="auth-context" style="margin-top: -100px;">
         <h2 class="form-title">Book Tickets Online</h2>
-        <form #inforRouteForm="ngForm" (ngSubmit)="submit()">
+        <form #inforRouteForm="ngForm">
             <div>
                 <label for="" class="label-title">Điểm Đi</label>
-                <select class="text-input" [(ngModel)]="service.select_route.departure" [ngModelOptions]="{standalone: true}" name="departure" (change)="cityChanged($event.target)" required>
-                    <option *ngFor="let item of list_departure" [Value]="item">{{item}}</option>
+                <select class="text-input" name="departure" (change)="cityChanged($event.target.value,0)" required>
+                    <option *ngFor="let item of listDeparture" value='{{item.id}}'>Bến xe {{item.thanh_pho}}</option>
                 </select>
                 <label for=""  class="label-title">Điểm Đến</label>
-                <select class="text-input" [(ngModel)]="service.select_route.destination" [ngModelOptions]="{standalone: true}" name="destination" required>
-                    <option *ngFor="let item of list_destiantion" [Value]="item.name">{{item.name}}</option>
+                <select class="text-input" name="destination" (change)="cityChanged($event.target.value,1)" required>
+                    <option *ngFor="let item of listDestiantion" value='{{item.id}}'>Bến xe {{item.ben_toi}}</option>
                 </select>
-
             </div>
             <div >
                 <label for="" class="label-title">Ngày Đi</label>
@@ -29,7 +28,7 @@
             </div>
             <hr>
             <div>
-                <button type="submit" name="search" class="btn btn-big" >Search</button>
+                <button type="submit" name="search" class="btn btn-big" (click)='submit()'>Tìm kiếm</button>
             </div>
         </form>
     </div>   
@@ -38,65 +37,23 @@
         <div class="blog" style="margin-left: 25px;">
             <h2 class="section-title">Tuyến Phố Biến</h2>
             <div class="container">
-                <div class="section">
+                <div class="section" *ngFor="let i of listRoterPoppular">
                     <div class="section-info">
-                       <img src="../../assets/1.jpg" alt="">
-                       <span style="float: right; margin-top: 10px;">SÀI GÒN => ĐÀ NẴNG</span>
-                        <i class="fas fa-map-marker-alt">850KM</i>
-                        <i class="fas fa-clock">8h</i>
-                        <i class="fas fa-tags price" >250000đ</i>
-                    </div>
-                    <div class="section-info">
-                       <img src="../../assets/2.jpg" alt="">
-                       <span style="float: right; margin-top: 10px;">SÀI GÒN => ĐÀ NẴNG</span>
-                        <i class="fas fa-map-marker-alt">850KM</i>
-                        <i class="fas fa-clock">8h</i>
-                        <i class="fas fa-tags price" >250000đ</i>
-                    </div>
-                    <div class="section-info">
-                       <img src="../../assets/3.jpg" alt="">
-                       <span style="float: right; margin-top: 10px;">SÀI GÒN => ĐÀ NẴNG</span>
-                        <i class="fas fa-map-marker-alt">850KM</i>
-                        <i class="fas fa-clock">8h</i>
-                        <i class="fas fa-tags price" >250000đ</i>
-                    </div>
-                    <div class="section-info">
-                       <img src="../../assets/4.jpg" alt="">
-                       <span style="float: right; margin-top: 10px;">SÀI GÒN => ĐÀ NẴNG</span>
-                        <i class="fas fa-map-marker-alt">850KM</i>
-                        <i class="fas fa-clock">8h</i>
-                        <i class="fas fa-tags price" >250000đ</i>
+                       <img src="{{i.hinh_anh}}" alt="">
+                       <div style="float: right;">
+                        <div>
+                            <span style="float: right; padding-top: 15px; margin-right: 10px;">{{i.ben_xe_di}} ⇒ {{i.ben_xe_toi}}</span>
+                        </div>
+                        <div>
+                                <i class="fas fa-map-marker-alt"> {{i.khoang_cach}}KM</i>
+                                <i class="fas fa-clock"> {{i.khoang_thoi_gian}}h</i>
+                                <i class="fas fa-tags price" > {{i.gia_ca}}đ</i>
+                        </div> 
+                       </div>
                     </div>
                 </div>
                 <div class="section">
-                    <div class="section-info">
-                       <img src="../../assets/5.jpg" alt="">
-                       <span style="float: right; margin-top: 10px;">SÀI GÒN => ĐÀ NẴNG</span>
-                        <i class="fas fa-map-marker-alt">850KM</i>
-                        <i class="fas fa-clock">8h</i>
-                        <i class="fas fa-tags price" >250000đ</i>
-                    </div>
-                    <div class="section-info">
-                       <img src="../../assets/6.jpg" alt="">
-                       <span style="float: right; margin-top: 10px;">SÀI GÒN => ĐÀ NẴNG</span>
-                        <i class="fas fa-map-marker-alt">850KM</i>
-                        <i class="fas fa-clock">8h</i>
-                        <i class="fas fa-tags price" >250000đ</i>
-                    </div>
-                    <div class="section-info">
-                       <img src="../../assets/7.jpg" alt="">
-                       <span style="float: right; margin-top: 10px;">SÀI GÒN => ĐÀ NẴNG</span>
-                        <i class="fas fa-map-marker-alt">850KM</i>
-                        <i class="fas fa-clock">8h</i>
-                        <i class="fas fa-tags price" >250000đ</i>
-                    </div>
-                    <div class="section-info">
-                       <img src="../../assets/8.jpg" alt="">
-                       <span style="float: right; margin-top: 10px;">SÀI GÒN => ĐÀ NẴNG</span>
-                        <i class="fas fa-map-marker-alt">850KM</i>
-                        <i class="fas fa-clock">8h</i>
-                        <i class="fas fa-tags price" >250000đ</i>
-                    </div>
+
                 </div>
             </div>
         </div>
@@ -109,7 +66,39 @@
         </div>
         <div class="for_slick_slider multiple-items">
             <div class="items">
+                <img src="../../assets/sapa.png" alt="">
+                <div class="item-text">
+                    <i class="fas fa-map-marker-alt">  Lào Cai</i>
+                    <h3>SaPa</h3>
+                </div>
+                <div class="overlay"></div>
+            </div>
+            <div class="items">
                 <img src="../../assets/dd1.jpg" alt="">
+                <div class="item-text">
+                    <i class="fas fa-map-marker-alt"> Quảng Ninh</i>
+                    <h3>Vịnh Hạ Long</h3>
+                </div>
+                <div class="overlay"></div>
+            </div>
+            <div class="items">
+                <img src="../../assets/hoi_an.png" alt="">
+                <div class="item-text">
+                    <i class="fas fa-map-marker-alt">  Đà Nẵng</i>
+                    <h3>Hội An</h3>
+                </div>
+                <div class="overlay"></div>
+            </div>
+            <div class="items">
+                <img src="../../assets/hue.png" alt="">
+                <div class="item-text">
+                    <i class="fas fa-map-marker-alt">  Huế</i>
+                    <h3>Cố Đô Huế</h3>
+                </div>
+                <div class="overlay"></div>
+            </div>
+            <div class="items">
+                <img src="../../assets/tphcm.png" alt="">
                 <div class="item-text">
                     <i class="fas fa-map-marker-alt">  Tp. Hồ Chí Minh</i>
                     <h3>Sài Gòn</h3>
@@ -117,82 +106,58 @@
                 <div class="overlay"></div>
             </div>
             <div class="items">
-                <img src="../../assets/dd1.jpg" alt="">
+                <img src="../../assets/nam_cat_tien.png" alt="">
                 <div class="item-text">
-                    <i class="fas fa-map-marker-alt">  Tp. Hồ Chí Minh</i>
-                    <h3>Sài Gòn</h3>
+                    <i class="fas fa-map-marker-alt">  Đồng Nai</i>
+                    <h3>Nam Cát Tiên</h3>
                 </div>
                 <div class="overlay"></div>
             </div>
             <div class="items">
-                <img src="../../assets/dd1.jpg" alt="">
+                <img src="../../assets/da_lat.png" alt="">
                 <div class="item-text">
-                    <i class="fas fa-map-marker-alt">  Tp. Hồ Chí Minh</i>
-                    <h3>Sài Gòn</h3>
+                    <i class="fas fa-map-marker-alt">  Đà Lạt</i>
+                    <h3>Lâm Đồng</h3>
                 </div>
                 <div class="overlay"></div>
             </div>
             <div class="items">
-                <img src="../../assets/dd1.jpg" alt="">
+                <img src="../../assets/ha_tien.png" alt="">
                 <div class="item-text">
-                    <i class="fas fa-map-marker-alt">  Tp. Hồ Chí Minh</i>
-                    <h3>Sài Gòn</h3>
+                    <i class="fas fa-map-marker-alt">  Hà Tiên</i>
+                    <h3>Rạch Giá</h3>
                 </div>
                 <div class="overlay"></div>
             </div>
             <div class="items">
-                <img src="../../assets/dd1.jpg" alt="">
+                <img src="../../assets/da_nang.png" alt="">
                 <div class="item-text">
-                    <i class="fas fa-map-marker-alt">  Tp. Hồ Chí Minh</i>
-                    <h3>Sài Gòn</h3>
+                    <i class="fas fa-map-marker-alt">  Đà Nẵng</i>
+                    <h3>Cầu Rồng</h3>
                 </div>
                 <div class="overlay"></div>
             </div>
             <div class="items">
-                <img src="../../assets/dd1.jpg" alt="">
+                <img src="../../assets/ha_noi.png" alt="">
                 <div class="item-text">
-                    <i class="fas fa-map-marker-alt">  Tp. Hồ Chí Minh</i>
-                    <h3>Sài Gòn</h3>
+                    <i class="fas fa-map-marker-alt">  Hà Nội</i>
+                    <h3>Hồ Gươm</h3>
                 </div>
                 <div class="overlay"></div>
             </div>
             <div class="items">
-                <img src="../../assets/dd1.jpg" alt="">
+                <img src="../../assets/nha_trang.png" alt="">
                 <div class="item-text">
-                    <i class="fas fa-map-marker-alt">  Tp. Hồ Chí Minh</i>
-                    <h3>Sài Gòn</h3>
+                    <i class="fas fa-map-marker-alt">  Nha Trang</i>
+                    <h3>Khánh Hòa</h3>
                 </div>
                 <div class="overlay"></div>
             </div>
             <div class="items">
-                <img src="../../assets/dd1.jpg" alt="">
+                <img src="../../assets/chau_doc.png" alt="">
                 <div class="item-text">
-                    <i class="fas fa-map-marker-alt">  Tp. Hồ Chí Minh</i>
-                    <h3>Sài Gòn</h3>
-                </div>
-                <div class="overlay"></div>
-            </div>
-            <div class="items">
-                <img src="../../assets/dd1.jpg" alt="">
-                <div class="item-text">
-                    <i class="fas fa-map-marker-alt">  Tp. Hồ Chí Minh</i>
-                    <h3>Sài Gòn</h3>
-                </div>
-                <div class="overlay"></div>
-            </div>
-            <div class="items">
-                <img src="../../assets/dd1.jpg" alt="">
-                <div class="item-text">
-                    <i class="fas fa-map-marker-alt">  Tp. Hồ Chí Minh</i>
-                    <h3>Sài Gòn</h3>
-                </div>
-                <div class="overlay"></div>
-            </div>
-            <div class="items">
-                <img src="../../assets/dd1.jpg" alt="">
-                <div class="item-text">
-                    <i class="fas fa-map-marker-alt">  Tp. Hồ Chí Minh</i>
-                    <h3>Sài Gòn</h3>
+                    <i class="fas fa-map-marker-alt">  Châu Đốc</i>
+                    <h3>Long Xuyên</h3>
                 </div>
                 <div class="overlay"></div>
             </div>
