--- a/Font-end/BookTickets/src/app/schedule/detail/detail.component.html
+++ b/Font-end/BookTickets/src/app/schedule/detail/detail.component.html
@@ -7,20 +7,58 @@
                 Bến xe & VP Trung chuyển
             </div>
             <div class="transhipment-content">
-                Bến Xe & VP Trung chuyển
+                <p  style="color: #F15A24;">Chưa có thông tin xử lý </p>
             </div>
         </div>
 
         <div class="transhipment" style="border-radius: 10px;">
             <div class="title">
-                Long Phu => Dai Ngai => Sai Gon <span>- 230km - 6h</span>
+                {{route.ben_xe_di}} ⇒ {{route.ben_xe_toi}} <span>- {{route.khoang_cach}}km - {{route.khoang_thoi_gian}}h</span>
             </div>
             <div class="content-left">
-                Bến Xe & VP Trung chuyển
+                <p>Thời gian di chuyển</p>   
+                <div style="display: flex;">
+                    <div style="width: 37%;">
+                        <p style="text-align: left; margin-left: 50px;">Sáng :</p>
+                        <ng-container *ngFor="let item of listSang">
+                            <p style="color: #F15A24;">{{item}}:00 h</p>
+                        </ng-container>
+                    </div>
+                    <div style="width: 35%;">
+                        <p style="text-align: left; margin-left: 50px;">Chiều :</p>
+                        <ng-container *ngFor="let item of listChieu">
+                            <p style="color: #F15A24;">{{item}}:00 h</p>
+                        </ng-container>
+                    </div>
+                    <div style="width: 30%;">
+                        <p style="text-align: left; margin-left: 50px;">Tối : </p>
+                        <ng-container *ngFor="let item of listToi">
+                            <p style="color: #F15A24;">{{item}}:00 h </p>
+                        </ng-container>
+                    </div>
+                </div>
             </div>
             <div class="content-right">
-                Bến Xe & VP Trung chuyển
+                <p>Nơi xuất phát : <span style="color: #F15A24;">Bến xe {{route.ben_xe_di}}</span> </p>
+                <p style="text-align: left; margin-left: 50px;color: #F15A24;">
+                    (*) Lưu ý:
+                </p>
+                <p style="text-align: left; margin-left: 100px;">
+                    - Quý khách vui lòng lên sớm hơn 20 phút để thu xếp hành lý.
+                </p>
+                <p style="text-align: left; margin-left: 100px;">
+                    - Xin hãy lưu lại thông tin mã vé để tiện cho việc kiểm tra.
+                </p>
+                <p style="text-align: left; margin-left: 50px;color: #F15A24;">
+                    (*) Chúc quý khách có một chuyến đi vui vẻ.
+                </p>
+                <p style="text-align: left; margin-left: 50px;color: #F15A24;">
+                    (*) Cảm ơn quý khách đã ưu ái nhà xe chúng tôi.
+                </p>
             </div>
+        </div>
+        <div class="continue">
+            <button class="button" (click)="onBook()">ĐẶT VÉ <i class="fas fa-chevron-right"></i></button>
         </div>
     </div>
 </section>
