--- a/Font-end/BookTickets/src/app/schedule/schedule.component.html
+++ b/Font-end/BookTickets/src/app/schedule/schedule.component.html
@@ -1,6 +1,6 @@
 <app-header index=1></app-header>
 <section>
-    <div class="container">
+    <div class="container" style="width: 71%;">
         <img src="../../assets/schedule.png" alt="">
         <div class="search">
             <div class="search-left">
@@ -19,146 +19,21 @@
                     <th>Loại Xe</th>
                     <th>Quãng Đường</th>
                     <th>Thời gian hành trình</th>
-                    <th>Giá Vé</th>
                     <th>Giờ chạy</th>
                     <th>Đặt Vé</th>
                 </tr>
-                <tr class="paren">
-                    <td>Bắc Bình Minh =></td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                </tr>
-                <tr>
-                    <td>TP.Hồ Chí Minh</td>
-                    <td> Giường</td>
-                    <td> 271 KM</td>
-                    <td> 6 giờ</td>
-                    <td> </td>
-                    <td> <span class="detail" [routerLink]="['/schedule/detail']">Chi tiết <i class="fas fa-info-circle"></i></span></td>
-                    <td> <span class="book" [routerLink]="['/booktickets/select-route']">Đặt vé <i class="fas fa-calendar-check"></i></span></td>
-                </tr>
-                <tr class="paren">
-                    <td>Bảo Lộc =></td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                </tr>
-                <tr>
-                    <td>TP.Hồ Chí Minh</td>
-                    <td> Giường</td>
-                    <td> 271 KM</td>
-                    <td> 6 giờ</td>
-                    <td> </td>
-                    <td> <span class="detail" [routerLink]="['/schedule/detail']">Chi tiết <i class="fas fa-info-circle"></i></span></td>
-                    <td> <span class="book">Đặt vé <i class="fas fa-calendar-check"></i></span></td>
-                </tr>
-                <tr>
-                    <td>TP.Hồ Chí Minh</td>
-                    <td> Giường</td>
-                    <td> 271 KM</td>
-                    <td> 6 giờ</td>
-                    <td> </td>
-                    <td> <span class="detail" [routerLink]="['/schedule/detail']">Chi tiết <i class="fas fa-info-circle"></i></span></td>
-                    <td> <span class="book">Đặt vé <i class="fas fa-calendar-check"></i></span></td>
-                </tr>
-                <tr>
-                    <td>TP.Hồ Chí Minh</td>
-                    <td> Giường</td>
-                    <td> 271 KM</td>
-                    <td> 6 giờ</td>
-                    <td> </td>
-                    <td> <span class="detail" [routerLink]="['/schedule/detail']">Chi tiết <i class="fas fa-info-circle"></i></span></td>
-                    <td> <span class="book">Đặt vé <i class="fas fa-calendar-check"></i></span></td>
-                </tr>
-                <tr class="paren">
-                    <td>Bến Tre =></td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                </tr>
-                <tr>
-                    <td>TP.Hồ Chí Minh</td>
-                    <td> Giường</td>
-                    <td> 271 KM</td>
-                    <td> 6 giờ</td>
-                    <td> </td>
-                    <td> <span class="detail" [routerLink]="['/schedule/detail']">Chi tiết <i class="fas fa-info-circle"></i></span></td>
-                    <td> <span class="book">Đặt vé <i class="fas fa-calendar-check"></i></span></td>
-                </tr>
-                <tr class="paren">
-                    <td>Buôn Ma Thuột =></td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                </tr>
-                <tr>
-                    <td>TP.Hồ Chí Minh</td>
-                    <td> Giường</td>
-                    <td> 271 KM</td>
-                    <td> 6 giờ</td>
-                    <td> </td>
-                    <td> <span class="detail" [routerLink]="['/schedule/detail']">Chi tiết <i class="fas fa-info-circle"></i></span></td>
-                    <td> <span class="book">Đặt vé <i class="fas fa-calendar-check"></i></span></td>
-                </tr>
-                <tr>
-                    <td>TP.Hồ Chí Minh</td>
-                    <td> Giường</td>
-                    <td> 271 KM</td>
-                    <td> 6 giờ</td>
-                    <td> </td>
-                    <td> <span class="detail" [routerLink]="['/schedule/detail']">Chi tiết <i class="fas fa-info-circle"></i></span></td>
-                    <td> <span class="book">Đặt vé <i class="fas fa-calendar-check"></i></span></td>
-                </tr>
-                <tr class="paren">
-                    <td>An Sương =></td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                </tr>
-                <tr>
-                    <td>TP.Hồ Chí Minh</td>
-                    <td> Giường</td>
-                    <td> 271 KM</td>
-                    <td> 6 giờ</td>
-                    <td> </td>
-                    <td> <span class="detail" [routerLink]="['/schedule/detail']">Chi tiết <i class="fas fa-info-circle"></i></span></td>
-                    <td> <span class="book">Đặt vé <i class="fas fa-calendar-check"></i></span></td>
-                </tr>
-                <tr class="paren">
-                    <td>An Sương =></td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                    <td> </td>
-                </tr>
-                <tr>
-                    <td>TP.Hồ Chí Minh</td>
-                    <td> Giường</td>
-                    <td> 271 KM</td>
-                    <td> 6 giờ</td>
-                    <td> </td>
-                    <td> <span class="detail" [routerLink]="['/schedule/detail']">Chi tiết <i class="fas fa-info-circle"></i></span></td>
-                    <td> <span class="book">Đặt vé <i class="fas fa-calendar-check"></i></span></td>
-                </tr>
+                <ng-container *ngFor="let item of allRouter">
+                    <tr>
+                        <td style="text-align: left;"> <span style="color: #F15A61; font-weight: bold;">{{item.ben_xe_di}}</span> <span style="font-weight: bold;"> ⇒ </span><span style="color: #009344; font-weight: bold;">{{item.ben_xe_toi}}</span></td>
+                        <td> Giường</td>
+                        <td>  {{item.khoang_cach}} KM</td>
+                        <td> {{item.khoang_thoi_gian}} giờ</td>
+                        <td><span class="detail" (click)="onDetail(item)">Chi tiết <i class="fas fa-info-circle"></i></span></td>
+                        <td (click)="onClick(item)"><span class="book">Đặt vé <i class="fas fa-calendar-check"></i></span></td>
+                    </tr>
+                </ng-container>
             </table>
+
         </div>
     </div>
 </section>
